# wikimedia-analysis

./: .gitignore  Download_retention_data.ipynb  README.md  category_image_usage.ipynb  get_all_sites.py
AI effects/: core_doc.md  design.md  (+2 more)
source-collection/: .env.example  LICENSE  REPOS.md  SERVICES.md  SETUP.md  fetch.py  pyproject.toml  sources.txt
source-collection/.claude/: settings.json
source-collection/cache/: medium2021extractivekmeans.md  medium2021mmr.md  rossiello2020sentence.md
source-collection/lib/: __init__.py  http.py  ratelimits.py  sources.py  text.py  wayback.py  wikimedia.py
source-collection/plug-ins/: README.md  fetch-interceptor.plugin  robots-checker.plugin  sources-linter.plugin
source-collection/plug-ins/fetch-interceptor/: README.md
source-collection/plug-ins/fetch-interceptor/.claude-plugin/: plugin.json
source-collection/plug-ins/fetch-interceptor/hooks/: hooks.json
source-collection/plug-ins/fetch-interceptor/scripts/: intercept_fetch.py
source-collection/plug-ins/robots-checker/: README.md
source-collection/plug-ins/robots-checker/.claude-plugin/: plugin.json
source-collection/plug-ins/robots-checker/hooks/: hooks.json
source-collection/plug-ins/robots-checker/scripts/: check_robots.py
source-collection/plug-ins/sources-linter/: README.md
source-collection/source_collection/: __init__.py  __main__.py  fetch.py
source-collection/source_collection/lib/: __init__.py  archivetoday.py  citoid.py  crossref.py  github.py  http.py  memento.py  openalex.py  spn2.py  text.py  unpaywall.py  wayback.py  wikimedia.py
(+455 files in other folders)
