[project]
name = "wikimedia-source-collection"
version = "0.2.0"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "certifi",
    "requests",
    "wayback",
]

[project.optional-dependencies]
pdf = ["pypdf"]

[project.scripts]
fetch-research = "source_collection.fetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source_collection"]
